--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,15 +1,14 @@
-name: Python application
+name: Continuous Integration
 
 on:
   push:
     branches: [ "main" ]
     paths-ignore:
-        - 'README.md'  
+      - 'README.md'
   pull_request:
     branches: [ "main" ]
     paths-ignore:
-        - 'README.md'  
-
+      - 'README.md'
 
 permissions:
   contents: read
@@ -20,19 +19,23 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest] 
-        python-version: ["3.8", "3.9"]
+        os: [ubuntu-latest, windows-latest]
+        python-version: ["3.8", "3.9", "3.10"]
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest tox tox-gh-actions
         pip install -r requirements.txt
-    - name: Test with tox
+
+    - name: Run tests with tox
       run: tox
