--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-pymongo
-pymongo[srv]
-dnspython
-pandas
-numpy
-ensure
-pytest
+# Core dependencies
+pandas>=1.3.0
+numpy>=1.21.0
+ensure>=1.0.2
 
+# Testing dependencies
+pytest>=7.1.3
+
+# Editable install for local development
 -e .
