--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,30 @@
 [metadata]
+name = nbsfoodpricecleaner
+version = 0.0.4
+author = prof2022
+author_email = jibrinharuna07@gmail.com
+description = A Python package for cleaning and processing NBS food price data.
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/prof2022/nbsfoodpricecleanerpkg
 license = MIT
 license_file = LICENSE
 classifiers = 
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Operating System :: OS Independent
+    License :: OSI Approved :: MIT License
+    Topic :: Software Development :: Libraries
 
 [options]
+package_dir =
+    = src
+packages = find:
 install_requires = 
-    ensure==1.0.2
-    py-youtube==1.1.7
+    pandas>=1.3.0
+    numpy>=1.21.0
 python_requires = >=3.7
 
 [options.extras_require]
@@ -22,7 +36,7 @@ testing =
     black>=22.8.0
 
 [options.package_data]
-MongoDB-Connect=py.typed
+nbsfoodpricecleaner = py.typed
 
 [flake8]
 max-line-length = 160
