--- a/tox.ini
+++ b/tox.ini
@@ -3,19 +3,27 @@ envlist = python3.7, python3.8, python3.9
 
 [gh-actions]
 python = 
+    3.7: python3.7
     3.8: python3.8
     3.9: python3.9
 
 [testenv]
-deps = -rrequirements_dev.txt
+deps = 
+    -rrequirements_dev.txt
+    pytest>=7.1.3
+    mypy>=0.971
+    flake8>=5.0.4
+    black>=22.8.0
 commands = 
-    # stop the build if there are Python syntax errors or undefined names
+    # Stop the build if there are Python syntax errors or undefined names
     flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
-    # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+    # Exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
     flake8 src --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    # type linting
+    # Type linting
     mypy src/
-    # pytest unit
+    # Black code formatting check
+    black --check src
+    # Unit tests
     pytest -v tests/unit
-    # pytest integration
+    # Integration tests
     pytest -v tests/integration
