--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,28 @@ commands =
     mypy src/
     # Black code formatting check
     black --check src
-    # Unit tests
-    pytest -v tests/unit
-    # Integration tests
-    pytest -v tests/integration
+    # Run all tests
+    pytest --tb=short --maxfail=5
+
+[testenv:lint]
+description = Run linting only
+deps = 
+    flake8>=5.0.4
+    black>=22.8.0
+commands =
+    flake8 src
+    black --check src
+
+[testenv:typing]
+description = Run type-checking only
+deps = 
+    mypy>=0.971
+commands =
+    mypy src/
+
+[testenv:tests]
+description = Run tests only
+deps = 
+    pytest>=7.1.3
+commands =
+    pytest --tb=short --maxfail=5
