--- a/.github/workflows/python-publish.yaml
+++ b/.github/workflows/python-publish.yaml
@@ -1,3 +1,58 @@
+# # Workflow to build, test, and upload the nbsfoodpricecleaner Python Package to PyPI
+# name: Upload Python Package
+
+# on:
+#   release:
+#     types: [published]
+
+# permissions:
+#   contents: read
+
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - name: Checkout repository
+#       uses: actions/checkout@v3
+
+#     - name: Set up Python
+#       uses: actions/setup-python@v3
+#       with:
+#         python-version: '3.8'
+
+#     - name: Install dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip install flake8 pytest mypy black build
+#         pip install -r requirements.txt
+
+#     - name: Lint with flake8
+#       run: |
+#         # Stop the build if there are Python syntax errors or undefined names
+#         flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
+#         # Exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+#         flake8 src --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
+#     - name: Check formatting with Black
+#       run: black --check src
+
+#     - name: Type checking with MyPy
+#       run: mypy src/
+
+#     - name: Test with pytest
+#       run: pytest -v
+
+#     - name: Build package
+#       run: python -m build
+
+#     - name: Publish package to PyPI
+#       uses: pypa/gh-action-pypi-publish@v1.6.4
+#       with:
+#         user: __token__
+#         password: ${{ secrets.PYPI_API_TOKEN }}
+
+
 # Workflow to build, test, and upload the nbsfoodpricecleaner Python Package to PyPI
 name: Upload Python Package
 
@@ -43,8 +98,8 @@ jobs:
     - name: Test with pytest
       run: pytest -v
 
-    - name: Build package
-      run: python -m build
+    - name: Build wheel package only
+      run: python -m build --wheel
 
     - name: Publish package to PyPI
       uses: pypa/gh-action-pypi-publish@v1.6.4
